var searchData=
[
  ['v3_2e0_0',['v3.0',['../md__github_workspace_node_modules_rimraf_CHANGELOG.html',1,'']]],
  ['v3_2e2_2e3_1',['v3.2.3',['../md__github_workspace_node_modules_async_CHANGELOG.html',1,'']]],
  ['v8_20coverage_2',['V8 Coverage',['../md__github_workspace_node_modules__bcoe_v8_coverage_dist_lib_README.html',1,'(Global Namespace)'],['../md__github_workspace_node_modules__bcoe_v8_coverage_README.html',1,'(Global Namespace)']]],
  ['v8_2dto_2distanbul_3',['v8-to-istanbul',['../md__github_workspace_node_modules_v8_to_istanbul_README.html',1,'']]],
  ['validate_4',['Validate',['../classresdb_1_1PYVerificator.html#a0c0838ed385e525e2dac0069271a4e14',1,'resdb::PYVerificator']]],
  ['validate_5',['validate',['../classresdb__validator_1_1models_1_1Transaction.html#a5508bbd6a9e4f688dc6c2371674574a5',1,'resdb_validator::models::Transaction']]],
  ['validate_5fall_5fitems_5fin_5flist_6',['validate_all_items_in_list',['../namespaceresdb__validator_1_1utils.html#a85be59ddb950d39fcb4f163788482217',1,'resdb_validator::utils']]],
  ['validate_5fall_5fkeys_5fin_5fobj_7',['validate_all_keys_in_obj',['../namespaceresdb__validator_1_1utils.html#a27c32b3ab9b40599d473a6477ccf6084',1,'resdb_validator::utils']]],
  ['validate_5fall_5fvalues_5ffor_5fkey_5fin_5flist_8',['validate_all_values_for_key_in_list',['../namespaceresdb__validator_1_1utils.html#afac6e5b7b90d2fc6c0c1baa660936ba6',1,'resdb_validator::utils']]],
  ['validate_5fall_5fvalues_5ffor_5fkey_5fin_5fobj_9',['validate_all_values_for_key_in_obj',['../namespaceresdb__validator_1_1utils.html#a51c3ccc924fa4ca3d73ff87071977892',1,'resdb_validator::utils']]],
  ['validate_5fcreate_10',['validate_create',['../classresdb__validator_1_1transaction_1_1Transaction.html#abd5f11c474ea00aaf939f3dff8b85814',1,'resdb_validator::transaction::Transaction']]],
  ['validate_5fid_11',['validate_id',['../classresdb__validator_1_1transaction_1_1Transaction.html#ab5406cb2251223fd137e5b32f536c59b',1,'resdb_validator::transaction::Transaction']]],
  ['validate_5fkey_12',['validate_key',['../namespaceresdb__validator_1_1utils.html#aecd9b39745df2ad452b9d11e875f2330',1,'resdb_validator::utils']]],
  ['validate_5fschema_13',['validate_schema',['../classresdb__validator_1_1transaction_1_1Transaction.html#af864d00f04d34e00c1431575c05694ef',1,'resdb_validator::transaction::Transaction']]],
  ['validate_5ftransaction_14',['validate_transaction',['../classresdb__validator_1_1lib_1_1ResDB.html#a2cf323149342fa791a994a46e571056a',1,'resdb_validator::lib::ResDB']]],
  ['validate_5ftransfer_15',['validate_transfer',['../classresdb__validator_1_1transaction_1_1Transaction.html#af9364c301bb8294cbdd5636ca4c9350f',1,'resdb_validator::transaction::Transaction']]],
  ['validate_5ftransfer_5finputs_16',['validate_transfer_inputs',['../classresdb__validator_1_1transaction_1_1Transaction.html#a0b613e612b0e05cf0891bd69415889ab',1,'resdb_validator::transaction::Transaction']]],
  ['validate_5ftxn_5fobj_17',['validate_txn_obj',['../namespaceresdb__validator_1_1utils.html#a2e673cc1d3bfb5d97d55d917f4c25e35',1,'resdb_validator::utils']]],
  ['validationerror_18',['ValidationError',['../classresdb__validator_1_1exceptions_1_1ValidationError.html',1,'resdb_validator::exceptions']]],
  ['validator_19',['validator',['../namespacevalidator.html',1,'']]],
  ['validator_2epy_20',['validator.py',['../validator_8py.html',1,'']]],
  ['value_21',['value',['../structresdb_1_1SDKTransaction.html#abe67b03be213436ea2f6530ec7081908',1,'resdb::SDKTransaction']]],
  ['vary_22',['vary',['../md__github_workspace_node_modules_vary_README.html',1,'']]],
  ['verifier_5f_23',['verifier_',['../query__test_8cpp.html#a5fe33f9b7069e844721a760cec552d99',1,'verifier_():&#160;query_test.cpp'],['../commitment__test_8cpp.html#a5fe33f9b7069e844721a760cec552d99',1,'verifier_():&#160;commitment_test.cpp'],['../classresdb_1_1ConsensusService.html#aa875c249f8e5acfb6718410949934f0c',1,'resdb::ConsensusService::verifier_()'],['../classresdb_1_1ViewChangeManager.html#a4bdf4017b9406d001115bf7a1f413e6e',1,'resdb::ViewChangeManager::verifier_()'],['../classresdb_1_1Commitment.html#ac18a010059b957c6689613b3f84cb0df',1,'resdb::Commitment::verifier_()'],['../classresdb_1_1CheckPointManager.html#a2277111dccaaf881af206a4ce7efa0b8',1,'resdb::CheckPointManager::verifier_()'],['../classresdb_1_1ResDBClient.html#a8a4c63d94130f8e0f45515e8b23a97ce',1,'resdb::ResDBClient::verifier_()']]],
  ['verifykey_24',['VerifyKey',['../classresdb_1_1SignatureVerifier.html#a08790752971f4f3d79190b86cff02315',1,'resdb::SignatureVerifier']]],
  ['verifymessage_25',['VerifyMessage',['../classresdb_1_1SignatureVerifier.html#aa3bc3f45f9486efb5412ee36089675bf',1,'resdb::SignatureVerifier::VerifyMessage(const google::protobuf::Message &amp;message, const SignatureInfo &amp;sign)'],['../classresdb_1_1SignatureVerifier.html#aab1500da0af60d65e1bf2b2ce9c85143',1,'resdb::SignatureVerifier::VerifyMessage(const std::string &amp;message, const KeyInfo &amp;public_key, const std::string &amp;signature)'],['../classresdb_1_1SignatureVerifier.html#af2e7bd53e9d0d2ab3eb1dfa3540de789',1,'resdb::SignatureVerifier::VerifyMessage(const std::string &amp;message, const SignatureInfo &amp;sign)']]],
  ['version_26',['VERSION',['../classresdb__validator_1_1transaction_1_1Transaction.html#a9ddcf6cf1204537f50bb6d8a7c16fffd',1,'resdb_validator::transaction::Transaction']]],
  ['version_27',['version',['../classresdb__validator_1_1transaction_1_1Transaction.html#a9ad29055496fd8270f4ef0e25875f3df',1,'resdb_validator::transaction::Transaction']]],
  ['view_5fchange_5fcounter_5f_28',['view_change_counter_',['../classresdb_1_1ViewChangeManager.html#a64e85ae7ea16f0e4481d45d38fc59a9a',1,'resdb::ViewChangeManager']]],
  ['view_5fchange_5fmanager_5f_29',['view_change_manager_',['../classresdb_1_1ConsensusServicePBFT.html#a2cf1307918fdae35ad9c498bfcfe9627',1,'resdb::ConsensusServicePBFT']]],
  ['viewchange_5fmanager_2ecpp_30',['viewchange_manager.cpp',['../viewchange__manager_8cpp.html',1,'']]],
  ['viewchange_5fmanager_2eh_31',['viewchange_manager.h',['../viewchange__manager_8h.html',1,'']]],
  ['viewchange_5fmanager_5ftest_2ecpp_32',['viewchange_manager_test.cpp',['../viewchange__manager__test_8cpp.html',1,'']]],
  ['viewchange_5frequest_5f_33',['viewchange_request_',['../classresdb_1_1ViewChangeManager.html#a15d3eb5ca9868dc6608dfc573e06b546',1,'resdb::ViewChangeManager']]],
  ['viewchangemanager_34',['ViewChangeManager',['../classresdb_1_1ViewChangeManager.html',1,'resdb::ViewChangeManager'],['../classresdb_1_1ViewChangeManager.html#a6d32dd97d9032aafb436261e670e0dc8',1,'resdb::ViewChangeManager::ViewChangeManager(const ResDBConfig &amp;config, CheckPointManager *checkpoint_manager, TransactionManager *transaction_manager, SystemInfo *system_info, ResDBReplicaClient *replica_client, SignatureVerifier *verifier)']]],
  ['viewchangestatus_35',['ViewChangeStatus',['../classresdb_1_1ViewChangeManager.html#acd229d978d381feb3b0301faf83b0c81',1,'resdb::ViewChangeManager']]]
];
