var searchData=
[
  ['v_201_204_200_202023_2002_2028_20a_0',['NexRes v1.4.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v.1.4.0&quot; &gt;2023-02-28&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md6',1,'']]],
  ['v1_200_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_200_200_202022_2009_2030_20a_1',['NexRes v1.0.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.0.0&quot; &gt;2022-09-30&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md11',1,'']]],
  ['v1_200_200_20alpha_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20alpha_202022_2009_2022_20a_2',['NexRes v1.0.0-alpha (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-alpha&quot; &gt;2022-09-22&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md12',1,'']]],
  ['v1_200_201_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_200_201_202022_2010_2013_20a_3',['NexRes v1.0.1 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.0.1&quot; &gt;2022-10-13&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md10',1,'']]],
  ['v1_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20v1_200_202019_2011_2024_20a_4',['v1.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/v1.0&quot; &gt;2019-11-24&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md16',1,'']]],
  ['v1_201_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_201_200_202023_2001_2003_20a_5',['NexRes v1.1.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.1.0&quot; &gt;2023-01-03&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md9',1,'']]],
  ['v1_201_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20v1_201_202019_2012_2005_20a_6',['v1.1 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/v1.1&quot; &gt;2019-12-05&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md15',1,'']]],
  ['v1_202_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_202_200_202023_2001_2029_20a_7',['NexRes v1.2.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.2.0&quot; &gt;2023-01-29&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md8',1,'']]],
  ['v1_203_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_203_200_202023_2002_2022_20a_8',['NexRes v1.3.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.3.0&quot; &gt;2023-02-22&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md7',1,'']]],
  ['v1_204_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v_201_204_200_202023_2002_2028_20a_9',['NexRes v1.4.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v.1.4.0&quot; &gt;2023-02-28&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md6',1,'']]],
  ['v1_205_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_205_200_202023_2004_2004_20a_10',['NexRes v1.5.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.5.0&quot; &gt;2023-04-04&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md5',1,'']]],
  ['v1_206_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_206_200_202023_2005_2030_20a_11',['NexRes v1.6.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.6.0&quot; &gt;2023-05-30&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md4',1,'']]],
  ['v1_207_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_207_200_202023_2008_2004_20a_12',['NexRes v1.7.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.7.0&quot; &gt;2023-08-04&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md3',1,'']]],
  ['v1_208_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_208_200_202023_2008_2021_20a_13',['NexRes v1.8.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.8.0&quot; &gt;2023-08-21&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md2',1,'']]],
  ['v1_209_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20nexres_20v1_209_200_202023_2011_2029_20a_14',['NexRes v1.9.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/nexres-v1.9.0&quot; &gt;2023-11-29&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md1',1,'']]],
  ['v2_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20v2_200_202020_2002_2029_20a_15',['v2.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/v2.0&quot; &gt;2020-02-29&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md14',1,'']]],
  ['v3_200_20a_20href_20https_3a_20github_20com_20resilientdb_20resilientdb_20releases_20tag_20v3_200_202021_2009_2030_20a_16',['v3.0 (&lt;a href=&quot;https://github.com/resilientdb/resilientdb/releases/tag/v3.0&quot; &gt;2021-09-30&lt;/a&gt;)',['../d9/d7c/md__2github_2workspace_2CHANGELOG.html#autotoc_md13',1,'']]],
  ['v4_205_200_17',['lodash.difference v4.5.0',['../dc/d57/md__2github_2workspace_2node__modules_2lodash_8difference_2README.html',1,'']]],
  ['v4_206_200_18',['lodash.union v4.6.0',['../d8/d90/md__2github_2workspace_2node__modules_2lodash_8union_2README.html',1,'']]],
  ['valuestype_19',['ValuesType',['../de/d28/classresdb_1_1MockStorage.html#a486fbc48604b0031bc66e012c8b475d2',1,'resdb::MockStorage']]],
  ['valuetype_20',['ValueType',['../de/d28/classresdb_1_1MockStorage.html#a3c245b499dad59270cf27fa29f16c1c2',1,'resdb::MockStorage']]],
  ['var_20expanded_20expand_20str_21',['var expanded = expand(str)',['../d1/d44/md__2github_2workspace_2node__modules_2brace-expansion_2README.html#autotoc_md53',1,'']]],
  ['var_20m_20balanced_20a_20b_20str_22',['var m = balanced(a, b, str)',['../de/d15/md__2github_2workspace_2node__modules_2balanced-match_2README.html#autotoc_md46',1,'']]],
  ['var_20r_20balanced_20range_20a_20b_20str_23',['var r = balanced.range(a, b, str)',['../de/d15/md__2github_2workspace_2node__modules_2balanced-match_2README.html#autotoc_md47',1,'']]],
  ['variables_24',['Exporting variables',['../dd/d5b/md__2github_2workspace_2node__modules_2_0dactions_2core_2README.html#autotoc_md32',1,'']]],
  ['vc_5fmutex_5f_25',['vc_mutex_',['../d1/db2/classresdb_1_1ViewChangeManager.html#a0ab0e74c1561122aaa3a844984581adf',1,'resdb::ViewChangeManager']]],
  ['verifier_5f_26',['verifier_',['../de/dc3/classresdb_1_1NetChannel.html#a2863fc820bb1a87b80b34a3ff67ebd1e',1,'resdb::NetChannel::verifier_'],['../dc/db0/classresdb_1_1CheckPointManager.html#a2277111dccaaf881af206a4ce7efa0b8',1,'resdb::CheckPointManager::verifier_'],['../d5/d74/commitment__test_8cpp.html#a5fe33f9b7069e844721a760cec552d99',1,'verifier_:&#160;commitment_test.cpp'],['../dc/d81/query__test_8cpp.html#a5fe33f9b7069e844721a760cec552d99',1,'verifier_:&#160;query_test.cpp'],['../dd/d4b/classresdb_1_1Commitment.html#ac18a010059b957c6689613b3f84cb0df',1,'resdb::Commitment::verifier_'],['../d1/db2/classresdb_1_1ViewChangeManager.html#a4bdf4017b9406d001115bf7a1f413e6e',1,'resdb::ViewChangeManager::verifier_'],['../da/d19/classresdb_1_1ConsensusManager.html#ae177488994172fcd48047151832529bf',1,'resdb::ConsensusManager::verifier_']]],
  ['verifyclientrequest_27',['VerifyClientRequest',['../da/d52/classresdb_1_1PreVerifyConsensusServicePBFT.html#a958946a9f9ada53bbb8e8a1b02162bf8',1,'resdb::PreVerifyConsensusServicePBFT']]],
  ['verifykey_28',['VerifyKey',['../d4/d30/classresdb_1_1SignatureVerifier.html#a08790752971f4f3d79190b86cff02315',1,'resdb::SignatureVerifier']]],
  ['verifymessage_29',['verifymessage',['../d4/d30/classresdb_1_1SignatureVerifier.html#af2e7bd53e9d0d2ab3eb1dfa3540de789',1,'resdb::SignatureVerifier::VerifyMessage(const std::string &amp;message, const SignatureInfo &amp;sign)'],['../d4/d30/classresdb_1_1SignatureVerifier.html#aa3bc3f45f9486efb5412ee36089675bf',1,'resdb::SignatureVerifier::VerifyMessage(const google::protobuf::Message &amp;message, const SignatureInfo &amp;sign)'],['../d4/d30/classresdb_1_1SignatureVerifier.html#aab1500da0af60d65e1bf2b2ce9c85143',1,'resdb::SignatureVerifier::VerifyMessage(const std::string &amp;message, const KeyInfo &amp;public_key, const std::string &amp;signature)']]],
  ['version_201_200_30',['note on version ~1.0',['../d2/dfd/md__2github_2workspace_2node__modules_2inherits_2README.html#autotoc_md139',1,'']]],
  ['version_204_200_200_31',['2018-06-22, Version 4.0.0',['../d3/d18/md__2github_2workspace_2node__modules_2ignore_2CHANGELOG.html#autotoc_md117',1,'']]],
  ['version_204_200_201_204_200_205_32',['~ 2018-08-09, Version 4.0.1 - 4.0.5',['../d3/d18/md__2github_2workspace_2node__modules_2ignore_2CHANGELOG.html#autotoc_md116',1,'']]],
  ['version_204_200_206_33',['2018-08-12, Version 4.0.6',['../d3/d18/md__2github_2workspace_2node__modules_2ignore_2CHANGELOG.html#autotoc_md115',1,'']]],
  ['version_205_200_200_34',['2018-08-13, Version 5.0.0',['../d3/d18/md__2github_2workspace_2node__modules_2ignore_2CHANGELOG.html#autotoc_md113',1,'']]],
  ['version_205_200_201_35',['2018-08-14, Version 5.0.1',['../d3/d18/md__2github_2workspace_2node__modules_2ignore_2CHANGELOG.html#autotoc_md112',1,'']]],
  ['version_20based_20function_36',['Non-Version-Based Function',['../d5/d74/md__2github_2workspace_2README.html#autotoc_md239',1,'']]],
  ['version_20based_20functions_37',['Version-Based Functions',['../d5/d74/md__2github_2workspace_2README.html#autotoc_md233',1,'']]],
  ['via_20docker_38',['Deploy via Docker',['../d5/d74/md__2github_2workspace_2README.html#autotoc_md244',1,'']]],
  ['view_39',['view',['../d9/d00/classresdb_1_1ViewChangeTimeout.html#a4ff4d35236c545ac821da38fec7ad9f7',1,'resdb::ViewChangeTimeout']]],
  ['view_5fchange_5fcounter_5f_40',['view_change_counter_',['../d1/db2/classresdb_1_1ViewChangeManager.html#a64e85ae7ea16f0e4481d45d38fc59a9a',1,'resdb::ViewChangeManager']]],
  ['view_5fchange_5ffail_41',['VIEW_CHANGE_FAIL',['../d1/db2/classresdb_1_1ViewChangeManager.html#acd229d978d381feb3b0301faf83b0c81a1ec5b50b0b9d489951c81d54dfdcdc5a',1,'resdb::ViewChangeManager']]],
  ['view_5fchange_5fmanager_5f_42',['view_change_manager_',['../d0/ded/classresdb_1_1ConsensusManagerPBFT.html#aa15421f4ebe10f35696129ae4257a627',1,'resdb::ConsensusManagerPBFT']]],
  ['viewchange_5fmanager_2ecpp_43',['viewchange_manager.cpp',['../d0/dd0/viewchange__manager_8cpp.html',1,'']]],
  ['viewchange_5fmanager_2eh_44',['viewchange_manager.h',['../d9/dc0/viewchange__manager_8h.html',1,'']]],
  ['viewchange_5fmanager_5ftest_2ecpp_45',['viewchange_manager_test.cpp',['../d9/d33/viewchange__manager__test_8cpp.html',1,'']]],
  ['viewchange_5frequest_5f_46',['viewchange_request_',['../d1/db2/classresdb_1_1ViewChangeManager.html#a15d3eb5ca9868dc6608dfc573e06b546',1,'resdb::ViewChangeManager']]],
  ['viewchange_5ftimeout_5fmin_5fheap_5f_47',['viewchange_timeout_min_heap_',['../d1/db2/classresdb_1_1ViewChangeManager.html#a4aeb8124da5c4c92d5cc198564ed53ab',1,'resdb::ViewChangeManager']]],
  ['viewchange_5ftimeout_5fset_48',['viewchange_timeout_set',['../d3/da3/classresdb_1_1ComplaningClients.html#a749ebd2f563b3f5418397e86c35c5af7',1,'resdb::ComplaningClients']]],
  ['viewchange_5ftimer_5fsignal_5f_49',['viewchange_timer_signal_',['../d1/db2/classresdb_1_1ViewChangeManager.html#ac2ba05528b2cfac2943893b4150e58c8',1,'resdb::ViewChangeManager']]],
  ['viewchangemanager_50',['viewchangemanager',['../d1/db2/classresdb_1_1ViewChangeManager.html',1,'resdb::ViewChangeManager'],['../d1/db2/classresdb_1_1ViewChangeManager.html#a8ddc1e38dcc408f29c8d5d4f270b0184',1,'resdb::ViewChangeManager::ViewChangeManager(const ResDBConfig &amp;config, CheckPointManager *checkpoint_manager, MessageManager *message_manager, SystemInfo *system_info, ReplicaCommunicator *replica_communicator, SignatureVerifier *verifier)']]],
  ['viewchangestatus_51',['ViewChangeStatus',['../d1/db2/classresdb_1_1ViewChangeManager.html#acd229d978d381feb3b0301faf83b0c81',1,'resdb::ViewChangeManager']]],
  ['viewchangetimeout_52',['viewchangetimeout',['../d9/d00/classresdb_1_1ViewChangeTimeout.html#a9c3945db42eb9eca4614e7b95571466a',1,'resdb::ViewChangeTimeout::ViewChangeTimeout()'],['../d9/d00/classresdb_1_1ViewChangeTimeout.html',1,'resdb::ViewChangeTimeout']]],
  ['viewchangetimertype_53',['ViewChangeTimerType',['../d5/d10/namespaceresdb.html#ae05061d085569cf14a198ad0477fa786',1,'resdb']]]
];
